Closed
Bug 1603999
Opened 1 year ago
Closed 1 year ago
libmozsandbox.so are not preloaded properly for the fork server
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox73 | --- | fixed |
People
(Reporter: sinker, Assigned: sinker)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:72.0) Gecko/20100101 Firefox/72.0
Steps to reproduce:
libmozsandbox.so implements wrappers of some syscalls, that is required in the content processes. It works only if it is preloaded in the content processes. However, with the fork server, content processes are forked from the fork server process without calling |exec()|. libmozsandbox.so is not preloaded in the fork server process, so it is not preloaded in the content processes too.
Assignee | ||
Comment 1•1 year ago
|
||
- make the fork server use the same sandbox level as content processes to make preloading work correctly.
- pass |canChroot| through env instead of hard coding.
Updated•1 year ago
|
Assignee: nobody → thinker.li
Updated•1 year ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•1 year ago
|
Status: NEW → ASSIGNED
Updated•1 year ago
|
Attachment #9115982 -
Attachment description: Bug 1603999 - Make mozsandbox being preloaded for the fork server. → Bug 1603999 - Make mozsandbox being preloaded for the fork server. r=gsvelto
Pushed by dluca@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c84531d22cf6 Make mozsandbox being preloaded for the fork server. r=gsvelto
Comment 3•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•