Bug 1603999 - Make mozsandbox being preloaded for the fork server. r=gsvelto

- make the fork server use the same sandbox level as content processes to make preloading work correctly.
 - pass |canChroot| through env instead of hard coding.

Differential Revision: https://phabricator.services.mozilla.com/D57221